tests/error/tracing_errors/not_iterable.py
from guppylang.decorator import guppy


@guppy.comptime
def test(x: int) -> None:
    for _ in x:
        pass


test.compile()
